# zhaw_at_touche

./: .gitignore  Implementation.md  Implementation_details.md  LICENSE  QA_checklist.md  README.md  TECHNICAL_ARCHITECTURE.md  architecture.md  my_task_subtask1.md  pyproject.toml  research_question.md  results.md  setup.md  touche_2025_participants_approaches.md  touche_2026_overview.md  working_log.md
data/: README.md
models/: README.md
results/: README.md  confusion_matrix.csv  metrics_summary.json  misclassified_analysis.csv  response_metrics.txt  standardized_results.csv
tests/: test_anchor_distance_classifier.py  test_anchor_distance_threshold.py  test_datasets.py  test_embedding_divergence.py  test_embedding_lr_classifier.py  test_evaluation_utils.py  test_generated_stats.py  test_generation_utils.py  test_modeling.py  test_overlap_utils.py  test_pairwise_distance.py  test_train_model_cli.py  test_training_setups.py  test_validation_setups.py
train_model/: README.md  setup10.json  setup100.json  setup101.json  setup102.json  setup103-gemma.json  setup103-qwen.json  setup103.json  setup104-base.json  setup104-qwen.json  setup104.json  setup105.json  setup105_1.json  setup106.json  setup11.json  setup110.json  setup111.json  setup113.json  setup114.json  setup115.json  setup116.json  setup117.json  setup118.json  setup119.json  setup12.json  setup120-gemma.json  setup120-qwen.json  setup121-gemma.json  setup121-qwen.json  setup13.json  setup14.json  setup4.json  setup6-qwen.json  setup6.json  setup6_3.json  setup7-qwen.json  setup7.json  setup7_2-qwen.json  (+2 more)
(+246 files in other folders)
